blue-app-https-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-https-gateway
  namespace: blue
  annotations:
    k8s.f5.com/irule-refs: "my-irule" # this is only used in v2.0.0 EHF-1
spec:
  gatewayClassName: f5-gateway-class
  infrastructure:
    parametersRef:
      group: k8s.f5net.com
      kind: F5BnkGateway
      name: my-https-bnkgateway
  listeners:
  - name: http-listener
    protocol: HTTP
    port: 8080
    allowedRoutes:
      namespaces:
        from: "All"
      kinds:
      - kind: HTTPRoute
  - name: https-listener
    protocol: HTTPS
    port: 443
    tls:
      certificateRefs:
      - kind: Secret
        group: ""
        name: tls-secret
        namespace: blue
    allowedRoutes:
      namespaces:
        from: "All"
      kinds:
      - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: l7-https-app
  namespace: blue
spec:
  parentRefs:
  - name: my-https-gateway
    sectionName: https-listener
  rules:
  - matches:
    - headers:
      - name: "Host"
        value: "blue.secure-demo.net"
    backendRefs:
    - name: nginx-app-svc
      namespace: blue
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  # bug: names must be unique
  name: l7-https-app-red
  namespace: red
spec:
  parentRefs:
  - name: my-https-gateway
    sectionName: http-listener
    namespace: blue
  - name: my-https-gateway
    sectionName: https-listener
    namespace: blue
  rules:
  - matches:
    - headers:
      - name: "Host"
        value: "red.secure-demo.net"
    backendRefs:
    - name: nginx-app-svc
      namespace: red
      port: 80
